# picoFDS

./: .gitignore  Notes.txt  README.md
hardware/: picoFDS.dch  picoFDS_proto.dip
src/: CMakeLists.txt  clock_hack.h  fds.c  fds.h  fds_read.pio  main.c  pins.h  sd_card.c  sd_card.h  types.h
src/deprecated/: fds.c  fds.h
src/fds/: disk.c  disk.h  fds.c  fds.h  ram_adapter.c  ram_adapter.h  read_data.pio
src/storage/: sd_card.c  sd_card.h
src/utils/: pin_utils.h  pio_utils.h
